# originate-tarkaflow-core

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_markdown_content.py  003_add_multi_user_auth.py  004_add_field_length_constraints.py  005_add_personal_access_tokens.py  006_add_projects_layer.py  021_add_task_routing_rules.py  023_release_work_items.py  025_work_item_target_versions.py  046_schema_simplification_cr009.py  049_add_deployed_by_release_id.py  050_require_work_item_project_id.py  051_acceptance_criteria_entity_cr017.py  052_extract_existing_acceptance_criteria.py  055_convert_success_criteria_to_subsection.py  058_fix_work_item_hrid_sequence_sync.py
src/raas_core/: __init__.py  crud.py  database.py  dependencies.py  elicitation.py  markdown_utils.py  models.py  schemas.py  state_machine.py  task_routing.py  task_sources.py  versioning.py  work_item_state_machine.py
src/raas_core/api/: main.py
src/raas_core/api/routers/: __init__.py  agents.py  change_requests.py  github.py  guardrails.py  organizations.py  projects.py  requirements.py  tasks.py  work_items.py
src/raas_core/templates/: component.md  epic.md  feature.md  guardrail.md  requirement.md
src/raas_mcp/: Dockerfile  __init__.py  formatters.py  handlers.py  requirements.txt  server.py  tools.py
src/tarka_core/: crud.py  markdown_utils.py  models.py  schemas.py  versioning.py
src/tarka_core/templates/: component.md  epic.md  feature.md  requirement.md
src/tarka_mcp/: formatters.py  handlers.py  tools.py
tests/: test_state_machine.py  test_versioning_metadata.py
(+3 files in other folders)
