[project]
name = "raas-core"
version = "1.0.0"
description = "RaaS Core - Shared requirements management engine"
authors = [
    {name = "Wayne Kennedy", email = "wayne@weareoriginate.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
mcp = [
    "httpx>=0.27.0",
    "mcp>=0.1.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
raas_core = ["py.typed"]
